fix: senk grid gap

--- a/portal/src/components/Grid/Grid.scss
+++ b/portal/src/components/Grid/Grid.scss
@@ -11,7 +11,7 @@
     }
 
     &__col {
-        margin: jkl.$spacing-l;
+        margin: jkl.$spacing-m;
         flex: 1;
 
         &:first-child {
